# mnasoft_lib

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README  README.md  mnas-build.bat  mnas-build.sh  mnas-msys-build.sh
ns_MNAS_CodePage/: FCodeTable.h
ns_MNAS_Error/: fmerror.h
ns_MNAS_Gases/: air.cpp  air.h  c2h2.cpp  c2h2.h  c2h4.cpp  c2h4.h  c2h5oh.cpp  c2h5oh.h  c2h6.cpp  c2h6.h  c3h6.cpp  c3h6.h  c3h8.h  c4h6_1-3.cpp  c4h6_1-3.h  c6h6.cpp  c6h6.h  ch4.cpp  ch4.h  co.h  co2.h  gases.h  h2.h  h2o.cpp  h2o.h  h2s.cpp  h2s.h  n2.h  n2_atm.h  no.h  no2.h  o2.cpp  o2.h  oh.h  so2.cpp  so2.h  teplojomkost.cpp  teplojomkost.h
ns_MNAS_HalfDiv/: method_half_div.cpp  method_half_div.h
ns_MNAS_Matrix/: fdigbase.cpp  fdigbase.h  fmatrix.cpp  fmatrix.h  fpolynom.cpp  fpolynom.h  fvector.h  table.h
ns_MNAS_MendeleevTbl/: Mnd_elem.cpp  Mnd_elem.h  elem.h
ns_MNAS_ValDimension/: eqation_analizer.cpp  nm_value.h
src/: mnasoft_lib_global.h
src/ns_MNAS_CodePage/: FCodeTable.cpp
src/ns_MNAS_Error/: ferror.cpp
src/ns_MNAS_Gases/: air.cpp  c2h2.h  c2h4.h  c2h5oh.h  c2h6.h  c3h6.h  c3h8.cpp  c3h8.h  c4h6_1-3.h  c6h6.h  co.cpp  co.h  co2.cpp  h2.cpp  h2.h  h2o.h  n2.cpp  n2_atm.cpp  no.cpp  no2.cpp  no2.h  oh.cpp  oh.h  teplojomkost.h
src/ns_MNAS_Matrix/: fmatrix.h  fpolynom.h  fvector.cpp  table.cpp  table.h
src/ns_MNAS_MendeleevTbl/: Mnd_elem.h  elem.cpp  elem.h
src/ns_MNAS_ValDimension/: eqation_analizer.h  eqation_el.cpp  eqation_el.h  nm_value.cpp
